imported all sheets

--- a/3dayGroup3fitAndPlot.Rmd
+++ b/3dayGroup3fitAndPlot.Rmd
@@ -56,6 +56,26 @@ minSPE<- -13 #targetSP = 14, subject reports first letter in stream (1)
 maxSPE<- 13 #targetSP = 3 and response position is 16```
 ```
 
+Inspect strange case of subject #915. Turns out it's actually fine, it's just that they didn't report seeing a letter very often, so it doesn't show up on the graph with common scale at bottom.
+
+```{r plot915, echo=FALSE, message=FALSE, fig.cap = "Fitted guessing distribution in yellow, discretized Gaussian in light blue, combined in green, dark blue is continuous Gaussian"}
+
+d915<- dplyr::filter(data,Subject==915)  
+plotContinuousGaussian<-TRUE; annotateIt<-TRUE
+g<- plot_hist_with_fit(d915,minSPE,maxSPE,d915$targetSP,numItemsInStream,plotContinuousGaussian,annotateIt, FALSE)
+g + annotate("text", x = 12, y = 25, label = "915")
+```
+
+Inspect strange case of subject #99. Turns out it's actually fine, it's just that they didn't report seeing a letter very often, so it doesn't show up on the graph with common scale at bottom.
+
+```{r plot99, echo=FALSE, message=FALSE, fig.cap = "Fitted guessing distribution in yellow, discretized Gaussian in light blue, combined in green, dark blue is continuous Gaussian"}
+
+d99<- dplyr::filter(data,Subject==99)  
+g<- plot_hist_with_fit(d915,minSPE,maxSPE,d915$targetSP,numItemsInStream,plotContinuousGaussian,annotateIt, FALSE)
+g + annotate("text", x = 12, y = 25, label = "99")
+```
+
+
 Fit mixture model to whole dataset and print a bit of the results
 
 ```{r, echo=FALSE, message=TRUE}
@@ -148,4 +168,4 @@ g<- annotate_fit(g,curves) #assumes curvesDf includes efficacy,latency,precision
 show(g)
 ```
 
-Inspect strange case of subject #915
+
