--- a/analyzeAll.Rmd
+++ b/analyzeAll.Rmd
@@ -73,7 +73,7 @@ condtnVariableNames <- c("Group","Condition","targetSP", "Block","Subject")
 debugging<- TRUE
 if (debugging) {
   #take a subset of the data just during debugging because analysis takes all night maybe
-  df<- allDays %>% filter(Group==1,Block==7,Condition=="one_day", Subject<17)
+  df<- allDays %>% filter(Group==1,Block<8,Condition=="one_day", Subject<17)
 }
   
 estimates<- df %>%  
@@ -83,8 +83,7 @@ estimates<- df %>%
 head(estimates)
 
 ```
-
-Save estimates to file.
+Parameter estimates done.
 
 ```{r saveParameterEstimates, echo=FALSE}
 
@@ -95,3 +94,4 @@ estimatesDf <- data.frame(estimates)
 write.csv(estimatesDf, destination)
 
 ```
+Estimates saved to file.
