--- a/investigateWeirdOnes.Rmd
+++ b/investigateWeirdOnes.Rmd
@@ -13,6 +13,7 @@ Load some data. Group 3 means all serial positions were used.
 
 ```{r load_and_clean}
 estimates<-read.csv( file.path("results",'estimates.csv') )
+library(ggplot2)
 library(dplyr)
 
 ```
@@ -28,17 +29,58 @@ Set up the experiment-specific parameters
 
 ```{r detailsNeededForMixtureModeling}
 
-annotateIt<-TRUE
 minSPE<- -13 #targetSP = 14, subject reports first letter in stream (1)
 maxSPE<- 13 #targetSP = 3 and response position is 16```
+numItemsInStream<- 16 #from their Methods section  
+
 ```
 
-Inspect strange case of subject #915. Turns out it's actually fine, it's just that they didn't report seeing a letter very often, so it doesn't show up on the graph with common scale at bottom.
+WHERE DOES DATA COME FROM? IS IT THE SAME AS alldays?
+```{r}
+fileWithPath<- file.path("dataRaw",'allDaysData.RData') 
+if (file.exists( fileWithPath )) {
+  load ( fileWithPath, verbose=TRUE  ) #loads allDays
+}
+#Exclude cases where SPE not applicable
+# When targetSP==0, that is a catch trial, no target presented
+#Response.Pos == False indicates either		a) the participant reported "0"
+# b) there was no target on that trial (also indicated by targetSP==0?)
+# c) the participant reported a stimulus that was not presented
+data <- allDays %>% filter(targetSP != 0) %>% filter(Response.Pos != FALSE)
+
+```
+Inspect 914. This subject is ok.
+```{r plot914, echo=FALSE, message=FALSE, fig.cap = "Fitted guessing distribution in yellow, discretized Gaussian in light blue, combined in green, dark blue is continuous Gaussian"}
+
+d914<- dplyr::filter(data,Subject==914)  
+plotContinuousGaussian<- TRUE 
+annotateIt<-TRUE
+g<- plot_hist_with_fit(d914,minSPE,maxSPE,d915$targetSP,numItemsInStream,
+                        plotContinuousGaussian,annotateIt, FALSE)
+g <- g + geom_vline(xintercept=0)
+
+g + annotate("text", x = 12, y = 25, label = "914")
+```
+
+Inspect strange case of subject #915. Turns out it's actually fine, it's just that they didn't report seeing a letter very often, so it doesn't show up on the graph with common scale at bottom."
 
 ```{r plot915, echo=FALSE, message=FALSE, fig.cap = "Fitted guessing distribution in yellow, discretized Gaussian in light blue, combined in green, dark blue is continuous Gaussian"}
 
 d915<- dplyr::filter(data,Subject==915)  
-plotContinuousGaussian<-TRUE; annotateIt<-TRUE
-g<- plot_hist_with_fit(d915,minSPE,maxSPE,d915$targetSP,numItemsInStream,plotContinuousGaussian,annotateIt, FALSE)
+plotContinuousGaussian<- TRUE 
+annotateIt<-TRUE
+g<- plot_hist_with_fit(d915,minSPE,maxSPE,d915$targetSP,numItemsInStream,
+                        plotContinuousGaussian,annotateIt, FALSE)
+g <- g + geom_vline(xintercept = 0)
 g + annotate("text", x = 12, y = 25, label = "915")
+
+```
+
+Also use plotBunch from plotBunch.r, which uses  facet_grid(Subject+targetSP~Epoch)
+
+```{r}
+dh <- allDays %>% dplyr::filter(Subject==915)
+source('plotBunch.R')
+#h<-plotBunch(dh,NULL,minSPE,maxSPE)
+#h
 ```
